# DeepShark

./: .gitignore  LICENSE  README.md
docs/notes/: appendices.md
src/Cpp/: CMakeLists.txt
src/Cpp/inc/: cards.hpp  constants.hpp  deepshark.hpp  playback.hpp  player.hpp  pot_dealer.hpp  serialize.hpp  storage.hpp  texasholdem.hpp
src/Cpp/makefiles/: deepshark.mak  test_cards.mak  test_heuristic_player.mak  test_monte_carlo.mak  test_multithreading.mak  test_playback.mak  test_the.mak
src/Cpp/src/: cards.cpp  deepshark.cpp  playback.cpp  player.cpp  pot_dealer.cpp  serialize.cpp  storage.cpp  texasholdem.cpp
src/Cpp/tests/functional/: test_heuristic_player.cpp  test_monte_carlo.cpp  test_multithreading.cpp  test_playback.cpp  test_the.cpp
src/Cpp/tests/inc/: test_monte_carlo.hpp  test_the.hpp
src/Cpp/tests/test_libtorch/: CMakeLists.txt  build_script.sh  test_libtorch.cpp
src/Cpp/tests/unit/: test_cards.cpp  test_the.cpp
src/deepshark/: generate_training_data.py  parse_tournament_results.py
src/deepshark/Jupyter/: heuristic_tournament_results.ipynb  neural_network_tournament_results.ipynb  parse_tournament_results.ipynb  test_libtorch.ipynb  train_nn.ipynb
